# scfg-rs

./: Cargo.toml  README.md
scfg-rs/: Cargo.toml  LICENSE  LICENSE-MIT  README.md
scfg-rs/.builds/: alpine.yml  archlinux.yml
scfg-rs/src/: lib.rs  parser.rs
src/: main.rs
