[package]
name = "scfg"
version = "0.3.0"
authors = ["Chris Vittal <chris@vittal.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An scfg parser"
keywords = ["config"]
repository = "https://git.sr.ht/~cdv/scfg-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
preserve_order = ["indexmap"]

[dependencies]
shell-words = "1.0.0"

[dependencies.indexmap]
version = "1.6.0"
optional = true
